--- a/package.json
+++ b/package.json
@@ -5,5 +5,24 @@
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
     "stripe": "^11.1.0"
-  }
+  },
+  "name": "arrow-computer-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/programming-hero-web-course-4/b612-used-products-resale-server-side-masudrana-1.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/programming-hero-web-course-4/b612-used-products-resale-server-side-masudrana-1/issues"
+  },
+  "homepage": "https://github.com/programming-hero-web-course-4/b612-used-products-resale-server-side-masudrana-1#readme",
+  "description": ""
 }
