--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
+    "start": "node index.js",
+    "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
